<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.roy.douapp.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/common_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <RadioGroup
                android:id="@+id/rg_mian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@null"
                    android:checked="true"
                    android:singleLine="true"
                    android:text="电影"
                    android:textColor="@drawable/radiobutton_selector"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/rb_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:button="@null"
                    android:singleLine="true"
                    android:text="音乐"
                    android:textColor="@drawable/radiobutton_selector"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/rb_sport"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:button="@null"
                    android:singleLine="true"
                    android:text="体育"
                    android:textColor="@drawable/radiobutton_selector"
                    android:textSize="15sp" />

            </RadioGroup>

        </android.support.v7.widget.Toolbar>


        <android.support.v4.widget.DrawerLayout
            android:id="@+id/dl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <android.support.design.widget.NavigationView
                android:id="@+id/nv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_system_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/system_setting" />

                    <Button
                        android:id="@+id/btn_personsl_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/personal_center" />
                </LinearLayout>
            </android.support.design.widget.NavigationView>
        </android.support.v4.widget.DrawerLayout>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star_empty"
            app:fab_label="@string/collection"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_back_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_to_top"
            app:fab_label="@string/back_to_top"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
