<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/iv_movie"
                        android:layout_width="120dp"
                        android:layout_height="171dp"
                        android:scaleType="centerCrop" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_movie"
                        android:orientation="vertical"
                        android:paddingLeft="20dp">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/text_gray_4"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView

                                android:id="@+id/tv_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/red_base"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/tv_rating_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:maxLines="1"
                                android:text=""
                                android:textColor="@color/text_gray_4"
                                android:textSize="13sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text=""
                            android:textColor="@color/text_gray_4"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text=""
                            android:textColor="@color/text_gray_4"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text=""
                            android:textColor="@color/text_gray_4"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/tv_original_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text=""
                            android:textColor="@color/text_gray_4"
                            android:textSize="13sp" />

                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/button_bg_red_base"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/summary"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/bg_light_gray"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:text=" " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg_red_base"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/director_actor_list"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ryv_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/bg_light_gray">

                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_more_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/bg_light_gray"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/more_details"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_buy_tickets"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/bg_light_gray"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/buy_tickets"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/star_empty"
        app:fabSize="normal" />

</RelativeLayout>