<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_music_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/iv_music"
                    android:layout_width="171dp"
                    android:layout_height="171dp"
                    android:scaleType="centerCrop" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_music"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <TextView
                        android:id="@+id/tv_music_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/text_gray_4"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView

                            android:id="@+id/tv_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:textColor="@color/red_base"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:maxLines="1"
                            android:text="人分享"
                            android:textColor="@color/text_gray_4"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_publish_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="发布：2016-11-22"
                        android:textColor="@color/text_gray_4"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_country_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="内地[国语]"
                        android:textColor="@color/text_gray_4"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/tv_singer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="崔子格[歌手]"
                        android:textColor="@color/text_gray_4"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_songwriting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="候炳历[作词]"
                        android:textColor="@color/text_gray_4"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_compose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="洪川[编曲]"
                        android:textColor="@color/text_gray_4"
                        android:textSize="13sp" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_bg_red_base"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/summary"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_album"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/iv_album"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_album_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_gray_4"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_album_role"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_gray_4"
                            android:text="[专辑]"
                            android:textSize="13sp" />

                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_artist"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerVertical="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/iv_artist"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_artist_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_gray_4"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_artist_role"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_gray_4"
                            android:text="[歌手]"
                            android:textSize="13sp" />

                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_play_music"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_light_gray"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/play_music"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_download_music"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_light_gray"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/download_music"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>